// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <ExpanderRow /> should render correctly 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  className="c0"
/>
`;

exports[`component <ExpanderRow /> with children should render correctly and have a data prop 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  className="c0"
>
  <div
    data={
      Object {
        "name": "morty",
      }
    }
    key=".0"
  >
    Some Expander Content
  </div>
</div>
`;

exports[`component <ExpanderRow numColumns /> should render correctly 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  className="c0"
/>
`;
